--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -72,7 +72,7 @@ body {
 		width: 100%;
 		height: 100%;
 		border-radius: 50%;
-		border: $w*.5 solid #777;
+		border: $w*.5 solid #ccc;
 		border-bottom-color: transparent;
 		animation: loading-icon-anim .5s infinite linear;
 	}
